updating the title

--- a/bgcreator.html
+++ b/bgcreator.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Background Generator</title>
+	<title>Cool Background Generator</title>
 	<link rel="stylesheet" type="text/css" href="./backgroundGradient.css">
 </head>
 <body id="gradient">
