--- a/bgcreator.html
+++ b/bgcreator.html
@@ -6,7 +6,7 @@
 </head>
 <body id="gradient">
 	<h1>Background Generator</h1>
-	<h2>This is the current background</h2>
+	<h2>Current CSS Background</h2>
 	<input class="color1" type="color" name="color1" value="#00ff00">
 	<input class="color2" type="color" name="color2" value="#ff0000">
 	<h3></h3>
